--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<!-- Spring Data MongoDB -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
